Fix Dropdown in Navbar Not Visible on Hover #308

--- a/assets/scss/_navbar_project.scss
+++ b/assets/scss/_navbar_project.scss
@@ -43,10 +43,9 @@
   }
 }
 .dropdown{
-  position: relative;
-  display: inline-block;
+  position: static;
 }
 
-.dropdown:hover .dropdown-menu{
+.dropdown:hover .dropdown-menu {
   display: block;
 }
